# SCOTR

./: CMakeLists.txt  CNN-doc.md  LICENSE  README.md  main.c
IOlib/: tensor_procesing.c  tensor_procesing.h
cnn/: cnn.c  cnn.h  convLayer.c  convLayer.h  fcLayer.c  fcLayer.h  grad.c  grad.h  layer.c  layer.h  poolLayer.c  poolLayer.h  reluLayer.c  reluLayer.h  testCase.h
docs/: API.md  README.md  cnn-schema.md  cnn.md
docs/imgs/: README.md
generator/: README.MD  captchaGenerator.py  generator.py  mnistGenerator.py  requirements.txt  test.py  util.py
math/: point.c  point.h  tensor.c  tensor.h  vector.c  vector.h
neural/: cnn.c  cnn.h  convLayer.c  convLayer.h  fcLayer.c  fcLayer.h  flatReluLayer.c  flatReluLayer.h  grad.c  layer.c  layer.h  poolLayer.h  reluLayer.c  reluLayer.h  testCase.h
src/: main.c
src/IOlib/: tensor_procesing.c
src/examples/: mintExample.c  simpleExample.h
src/io/: cnnProcesing.h  mathProcesing.c
src/main/: main.c
src/main/examples/: mintExample.h  mnistExample.c  mnistExample.h  simpleExample.c
src/main/io/: cnnProcesing.c  mathProcesing.c  mathProcesing.h
src/main/math/: point.c  point.h  tensor.c  tensor.h  vector.c  vector.h
src/main/neural/: cnn.c  cnn.h  convLayer.c  convLayer.h  fcLayer.c  grad.c  grad.h  layer.c  poolLayer.c  poolLayer.h  reluLayer.c  reluLayer.h  testCase.h
src/main/util/: cnnUtil.c  cnnUtil.h  debugAssert.h
src/math/: point.c  point.h  tensor.c  vector.c  vector.h
src/neural/: cnn.c  cnn.h  convLayer.c  convLayer.h  fcLayer.c  fcLayer.h  grad.c  grad.h  layer.c  layer.h  poolLayer.c  poolLayer.h  reluLayer.c  reluLayer.h
src/test/: tests.c
src/test/math/: mathTest.c  pointTest.c  pointTest.h  tensorTest.c  vectorTest.c  vectorTest.h
src/test/neural/: cnnTest.c  cnnTest.h  convLayerTest.c  convLayerTest.h  gradTest.c  gradTest.h  neuralTest.c  neuralTest.h  poolLayerTest.c  poolLayerTest.h  reluLayerTest.c  reluLayerTest.h
src/util/: cnnUtil.c  cnnUtil.h
storage/: README.md  mnistCnn.txt
test/math/: mathTest.h  pointTest.c  pointTest.h  tensorTest.c  vectorTest.c
test/neural/: cnnTest.c  convLayerTest.c  gradTest.c  layerTest.h  neuralTest.c  poolLayerTest.h  reluLayerTest.h
testImg/: results.txt
tests/: point_test.c  tensor_test.c  tests.c  tests.h  vector_tests.c
tests/math/: mathTest.c  pointTest.h  tensorTest.c  tensorTest.h  vectorTest.c
tests/neural/: cnnTest.c  convLayerTest.c  fcLayerTest.c  fcLayerTest.h  flatReluLayerTest.c  flatReluLayerTest.h  gradTest.c  layerTest.c  layerTest.h  neuralTest.c  neuralTest.h  poolLayerTest.c  poolLayerTest.h  reluLayerTest.c  reluLayerTest.h
util/: debugAssert.h
